--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -59,9 +59,8 @@
 {{- $class := "post-entry" }}
 
 {{- $user_preferred := or site.Params.disableSpecial1stPost site.Params.homeInfoParams }}
-{{- if (and $.IsHome (eq $paginator.PageNumber 1) (eq $index 0) (not $user_preferred)) }}
-{{- $class = "first-entry" }}
-{{- else if $term }}
+
+{{- if $term }}
 {{- $class = "post-entry tag-entry" }}
 {{- end }}
   <article class="{{ $class }}">
