--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,7 +25,7 @@ body.light, :root.light {
 .post-entry {
     display: flex;
     align-items: center; /* 垂直方向の中央揃え */
-    padding: 4px;
+    padding: 0px;
     margin-bottom: 1rem;
     border-radius: 8px; /* 角を丸くする */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 影を追加 */
@@ -38,8 +38,8 @@ body.light, :root.light {
 
 /* サムネイル画像のサイズ調整 */
 .post-entry img {
-    width: 150px; /* 幅を指定 */
-    height: 100px; /* 高さを指定 */
+    width: 240px; /* 幅を指定 */
+    height: 160px; /* 高さを指定 */
     object-fit: cover; /* 画像が歪まないように調整 */
     border-radius: 6px;
     margin-right: 1rem;
@@ -83,8 +83,8 @@ body.light, :root.light {
 /* グリッドレイアウト用のコンテナ */
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* 250px以上の幅で自動的に列を作成 */
-    gap: 1rem; /* カード間のスペース */
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* 250px以上の幅で自動的に列を作成 */
+    gap: 8px; /* カード間のスペース */
 }
 
 /* グリッドレイアウト時の記事カードのスタイル */
@@ -97,9 +97,10 @@ body.light, :root.light {
 
 .grid-container .post-entry img {
     width: 100%; /* 画像をカードの幅いっぱいに表示 */
-    height: 150px; /* 画像の高さを固定 */
+    height: 100%; /* 画像の高さを固定 */
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    margin-right: 0;
 }
 
 .grid-container .post-entry .entry-content-wrapper {
