--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -69,7 +69,7 @@
     {{- if and (.Param "ShowImage") (.Params.images) }}
     <img src="{{ index .Params.images 0 }}" alt="{{ .Title }}" />
     {{- else}}
-    <img src="../../static/images/no_image.png" alt="{{ `No Image` }}" />
+    <img src="{{ "images/no_image.png" | relURL }}" alt="{{ `No Image` }}" />
     {{- end }}
     <header class="entry-header">
       <h2 class="entry-hint-parent">
